2008-11-29 [paul]	3.6.1cvs53

	* README
		add the new 'primary_paste_unselects' hidden
		option, add missing 'log_[...]_color' options,
		and reformat the text
	* manual/advanced.xml
		add the new 'primary_paste_unselects' hidden
                option, add missing 'log_[...]_color' options

2008-11-28 [colin]	3.6.1cvs52

	* src/mimeview.c
		Fix leak

2008-11-28 [colin]	3.6.1cvs51

	* po/fr.po
		Update translation

2008-11-28 [colin]	3.6.1cvs50

	* src/mainwindow.c
		Fix account selection in Mailing list
		menu

2008-11-28 [paul]	3.6.1cvs49

	* po/Makefile.in.in
		automatically remove obsolete strings

2008-11-28 [colin]	3.6.1cvs48

	* src/plugins/pgpcore/sgpgme.c
		Fix error message when key isn't available.

2008-11-27 [colin]	3.6.1cvs47

	* src/filtering.c
	* src/matcher.c
		Fix a little leak

2008-11-26 [colin]	3.6.1cvs46

	* src/common/ssl.c
		Fix new warning

2008-11-26 [colin]	3.6.1cvs45

	* src/plugins/pgpcore/select-keys.c
	* src/plugins/pgpcore/sgpgme.c
		Fix bug 1591, 'S/MIME: better key 
		handling/selection dialog'
		Really ignore revoked/expired keys

2008-11-26 [colin]	3.6.1cvs44

	* src/main.c
	* src/common/claws.c
	* src/common/ssl.c
		Make sure libgcrypt's threading is initialised
		before gnutls. See also old bug 1539.

2008-11-26 [colin]	3.6.1cvs43

	* src/imap.c
	* src/news.c
	* src/etpan/imap-thread.c
		Fix possible crashes due to clist_begin()
		not checking for NULLs (it should!)

2008-11-25 [colin]	3.6.1cvs42

	* src/procmime.c
		Fix line length in MIME parameters

2008-11-22 [paul]	3.6.1cvs41

	* src/compose.c
		grab Return key press in attachments Properties
		dialog

2008-11-21 [colin]	3.6.1cvs40

	* src/compose.c
	* src/procmime.c
		Fix bug 1776, 'use encoded name parameters 
		for attachments instead of ascii'.
		Break the RFC 2047 by using B-encoded 
		filename parameter, like everyone does,
		following advice from the RFC author.

2008-11-21 [colin]	3.6.1cvs39

	* src/common/socket.c
		Rehandshake if server asks to
